<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="@color/green"
    tools:context=".ui.screens.profScreen.ProfFragment">

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        >
        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/profile_picture_of_user"
            android:scaleType="centerCrop" />
        <ImageView
            android:id="@+id/editPic"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_add"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/editing_mode"
             />
    </FrameLayout>

    <TextView
        android:id="@+id/profUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_margin="20dp"
        style="@style/TextAppearance.Material3.TitleLarge" />
    <TextView
        android:id="@+id/profUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_wishihadnt_gmail_com"
        android:layout_margin="20dp"
        style="@style/TextAppearance.Material3.TitleLarge" />
    <TextView
        android:id="@+id/profPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_000_400_4774"
        android:layout_margin="20dp"
        style="@style/TextAppearance.Material3.TitleLarge" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        app:cornerRadius="4dp"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="15dp"
        android:text="@string/logout" />

</LinearLayout>