<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="@color/green"
    tools:context=".ui.screens.quizScreen.QuizFragment">

    <LinearLayout
        android:id="@+id/llMainQuest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical">
        <TextView
            android:id="@+id/timer"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/time_n_a" />

        <TextView
            android:id="@+id/quest_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="@color/white"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:background="@color/blue" />

        <RadioGroup
            android:id="@+id/quizOpt"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg" />
            <RadioButton
                android:id="@+id/ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg" />
            <RadioButton
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg" />
            <RadioButton
                android:id="@+id/ans4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_bg" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quizNextBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            app:cornerRadius="4dp"
            android:textSize="15sp"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="15dp"
            android:text="@string/next" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/llQuizResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <TextView
            android:id="@+id/title_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:text="@string/your_marks"
            android:textSize="45sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:text="@string/marks_n_a"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_title"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            app:cornerRadius="4dp"
            android:textSize="25sp"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="15dp"
            android:text="@string/finished" />

    </LinearLayout>

</LinearLayout>